--- a/10H/10H/Web.config
+++ b/10H/10H/Web.config
@@ -11,6 +11,8 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-10H-20170323024453.mdf;Initial Catalog=aspnet-10H-20170323024453;Integrated Security=True"
       providerName="System.Data.SqlClient" />
+    <add name="10HDBContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\10H.mdf;Initial Catalog=aspnet-10H-20170323024453;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
