--- a/10H/Models/Models.csproj
+++ b/10H/Models/Models.csproj
@@ -50,12 +50,62 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="10HDBContext.cs" />
+    <Compile Include="Format.cs" />
+    <Compile Include="Formating.cs" />
+    <Compile Include="Migrations\201704041716277_initial.cs" />
+    <Compile Include="Migrations\201704041716277_initial.Designer.cs">
+      <DependentUpon>201704041716277_initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201704041740048_Role.cs" />
+    <Compile Include="Migrations\201704041740048_Role.Designer.cs">
+      <DependentUpon>201704041740048_Role.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201704041745255_Music.cs" />
+    <Compile Include="Migrations\201704041745255_Music.Designer.cs">
+      <DependentUpon>201704041745255_Music.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201704041748345_Order.cs" />
+    <Compile Include="Migrations\201704041748345_Order.Designer.cs">
+      <DependentUpon>201704041748345_Order.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201704041750251_Format.cs" />
+    <Compile Include="Migrations\201704041750251_Format.Designer.cs">
+      <DependentUpon>201704041750251_Format.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201704041753027_Formating.cs" />
+    <Compile Include="Migrations\201704041753027_Formating.Designer.cs">
+      <DependentUpon>201704041753027_Formating.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Music.cs" />
+    <Compile Include="Order.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Role.cs" />
     <Compile Include="User.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201704041716277_initial.resx">
+      <DependentUpon>201704041716277_initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704041740048_Role.resx">
+      <DependentUpon>201704041740048_Role.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704041745255_Music.resx">
+      <DependentUpon>201704041745255_Music.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704041748345_Order.resx">
+      <DependentUpon>201704041748345_Order.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704041750251_Format.resx">
+      <DependentUpon>201704041750251_Format.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704041753027_Formating.resx">
+      <DependentUpon>201704041753027_Formating.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
