--- a/10H/Models/Models.csproj
+++ b/10H/Models/Models.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="10HDBContext.cs" />
+    <Compile Include="Album.cs" />
     <Compile Include="Format.cs" />
     <Compile Include="Formating.cs" />
     <Compile Include="Migrations\201704041716277_initial.cs" />
@@ -75,6 +76,14 @@
     <Compile Include="Migrations\201704041753027_Formating.cs" />
     <Compile Include="Migrations\201704041753027_Formating.Designer.cs">
       <DependentUpon>201704041753027_Formating.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201704061154361_Album.cs" />
+    <Compile Include="Migrations\201704061154361_Album.Designer.cs">
+      <DependentUpon>201704061154361_Album.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201704061158416_Album1.cs" />
+    <Compile Include="Migrations\201704061158416_Album1.Designer.cs">
+      <DependentUpon>201704061158416_Album1.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Music.cs" />
@@ -105,6 +114,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201704041753027_Formating.resx">
       <DependentUpon>201704041753027_Formating.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704061154361_Album.resx">
+      <DependentUpon>201704061154361_Album.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704061158416_Album1.resx">
+      <DependentUpon>201704061158416_Album1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
