AdminMusicController : lister les musiques du serveur, en ajouter, en supprimer en base de donnée

--- a/10H/10H/10H.csproj
+++ b/10H/10H/10H.csproj
@@ -206,6 +206,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\AdminMusicController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
@@ -281,9 +282,13 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
+    <Content Include="Views\AdminMusic\Create.cshtml" />
+    <Content Include="Views\AdminMusic\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Content\Ressources\Images\" />
+    <Folder Include="Content\Ressources\Musics\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -299,6 +304,10 @@
     <ProjectReference Include="..\Models\Models.csproj">
       <Project>{317a7e82-081b-4fbb-b06e-d1e7f1d10b9b}</Project>
       <Name>Models</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Service\Service.csproj">
+      <Project>{5bb08849-cf3c-472c-87d3-2b6fabdfdf0f}</Project>
+      <Name>Service</Name>
     </ProjectReference>
     <ProjectReference Include="..\ViewModels\ViewModels.csproj">
       <Project>{fbe62137-4a51-4892-93c9-d4ec80b932b8}</Project>
