--- a/10H/ViewModels/ViewModels.csproj
+++ b/10H/ViewModels/ViewModels.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MusicsResponseVM.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UsersResponseVM.cs" />
   </ItemGroup>
