Upload de musiques

--- a/10H/10H/Web.config
+++ b/10H/10H/Web.config
@@ -18,7 +18,7 @@
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.6.1" />
-    <httpRuntime targetFramework="4.6.1" />
+    <httpRuntime targetFramework="4.6.1" maxRequestLength="200000" executionTimeout="99999"/>
   </system.web>
   <system.webServer>
     <modules>
