--- a/10H/10H/Web.config
+++ b/10H/10H/Web.config
@@ -9,8 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-10H-20170323024453.mdf;Initial Catalog=aspnet-10H-20170323024453;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-10H-20170323024453.mdf;Initial Catalog=aspnet-10H-20170323024453;Integrated Security=True"
+      providerName="System.Data.SqlClient" />-->
     <add name="_10HDBContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\10H.mdf;Initial Catalog=aspnet-10H-20170323024453;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
