Ajout des albums

--- a/10H/10H/Web.config
+++ b/10H/10H/Web.config
@@ -11,14 +11,13 @@
   <connectionStrings>
     <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-10H-20170323024453.mdf;Initial Catalog=aspnet-10H-20170323024453;Integrated Security=True"
       providerName="System.Data.SqlClient" />-->
-    <add name="_10HDBContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\10H.mdf;Initial Catalog=aspnet-10H-20170323024453;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <add name="_10HDBContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\10H.mdf;Initial Catalog=aspnet-10H-20170323024453;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.6.1" />
-    <httpRuntime targetFramework="4.6.1" maxRequestLength="200000" executionTimeout="99999"/>
+    <httpRuntime targetFramework="4.6.1" maxRequestLength="200000" executionTimeout="99999" />
   </system.web>
   <system.webServer>
     <modules>
@@ -51,7 +50,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" culture="neutral" publicKeyToken="30ad4fe6b2a6aeed" />
-        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.0.0" newVersion="9.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Optimization" publicKeyToken="31bf3856ad364e35" />
