--- a/10H/Models/Models.csproj
+++ b/10H/Models/Models.csproj
@@ -38,6 +38,14 @@
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="SendGrid, Version=9.1.0.0, Culture=neutral, PublicKeyToken=4f047e93159395ca, processorArchitecture=MSIL">
+      <HintPath>..\packages\Sendgrid.9.1.0\lib\net452\SendGrid.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -89,6 +97,18 @@
     <Compile Include="Migrations\201704061319094_MusicNumber.Designer.cs">
       <DependentUpon>201704061319094_MusicNumber.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201704111225425_Thumbnails.cs" />
+    <Compile Include="Migrations\201704111225425_Thumbnails.Designer.cs">
+      <DependentUpon>201704111225425_Thumbnails.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201704111425148_AlbumKey.cs" />
+    <Compile Include="Migrations\201704111425148_AlbumKey.Designer.cs">
+      <DependentUpon>201704111425148_AlbumKey.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201704111801226_OrderDate.cs" />
+    <Compile Include="Migrations\201704111801226_OrderDate.Designer.cs">
+      <DependentUpon>201704111801226_OrderDate.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Music.cs" />
     <Compile Include="Order.cs" />
@@ -127,6 +147,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201704061319094_MusicNumber.resx">
       <DependentUpon>201704061319094_MusicNumber.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704111225425_Thumbnails.resx">
+      <DependentUpon>201704111225425_Thumbnails.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704111425148_AlbumKey.resx">
+      <DependentUpon>201704111425148_AlbumKey.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704111801226_OrderDate.resx">
+      <DependentUpon>201704111801226_OrderDate.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
