--- a/10H/Models/Models.csproj
+++ b/10H/Models/Models.csproj
@@ -59,6 +59,7 @@
   <ItemGroup>
     <Compile Include="10HDBContext.cs" />
     <Compile Include="Album.cs" />
+    <Compile Include="Comment.cs" />
     <Compile Include="Format.cs" />
     <Compile Include="Formating.cs" />
     <Compile Include="Migrations\201704041716277_initial.cs" />
@@ -109,6 +110,10 @@
     <Compile Include="Migrations\201704111801226_OrderDate.Designer.cs">
       <DependentUpon>201704111801226_OrderDate.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201704112029502_comment.cs" />
+    <Compile Include="Migrations\201704112029502_comment.Designer.cs">
+      <DependentUpon>201704112029502_comment.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Music.cs" />
     <Compile Include="Order.cs" />
@@ -156,6 +161,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201704111801226_OrderDate.resx">
       <DependentUpon>201704111801226_OrderDate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704112029502_comment.resx">
+      <DependentUpon>201704112029502_comment.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
