--- a/10H/ViewModels/ViewModels.csproj
+++ b/10H/ViewModels/ViewModels.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AlbumsResponseVM.cs" />
+    <Compile Include="CommentsResponseVM.cs" />
     <Compile Include="MusicsResponseVM.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UsersResponseVM.cs" />
