Liste des musiques et connexion musiques albums pour l'album

--- a/10H/10H/10H.csproj
+++ b/10H/10H/10H.csproj
@@ -215,6 +215,7 @@
     <Compile Include="Controllers\AdminMusicController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\MusicController.cs" />
     <Compile Include="Controllers\PurchaseController.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
@@ -314,6 +315,7 @@
     <Content Include="Views\AdminAlbum\Create.cshtml" />
     <Content Include="Views\AdminAlbum\Details.cshtml" />
     <Content Include="Views\AdminAlbum\Edit.cshtml" />
+    <Content Include="Views\Music\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
