--- a/10H/10H/10H.csproj
+++ b/10H/10H/10H.csproj
@@ -318,6 +318,7 @@
     <Content Include="Views\AdminAlbum\Edit.cshtml" />
     <Content Include="Views\Music\Index.cshtml" />
     <Content Include="Views\Comment\AddComment.cshtml" />
+    <Content Include="Views\User\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
