--- a/10H/Models/Models.csproj
+++ b/10H/Models/Models.csproj
@@ -158,6 +158,10 @@
     <Compile Include="Migrations\201704121217146_commentMusidID.Designer.cs">
       <DependentUpon>201704121217146_commentMusidID.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201704122324072_soldeuser.cs" />
+    <Compile Include="Migrations\201704122324072_soldeuser.Designer.cs">
+      <DependentUpon>201704122324072_soldeuser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Music.cs" />
     <Compile Include="Order.cs" />
@@ -219,6 +223,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201704121217146_commentMusidID.resx">
       <DependentUpon>201704121217146_commentMusidID.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704122324072_soldeuser.resx">
+      <DependentUpon>201704122324072_soldeuser.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
