--- a/10H/10H/10H.csproj
+++ b/10H/10H/10H.csproj
@@ -334,6 +334,7 @@
     <Content Include="Views\Order\Index.cshtml" />
     <Content Include="Views\Order\AlreadyBought.cshtml" />
     <Content Include="Views\User\ManageSold.cshtml" />
+    <Content Include="Views\Order\NotEnoughMoney.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
